--- a/src/index.html.ejs
+++ b/src/index.html.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html <% if (htmlWebpackPlugin.options.prerender) { %>${htmlAttributes}<% } else { %>lang="en"<% } %>>
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -8,8 +8,8 @@
       name="generator"
       content="Scrivito by JustRelate Group GmbH (scrivito.com)"
     />
-
-    <title>Your Scrivito powered site is loading ...</title>
+    <% if (htmlWebpackPlugin.options.prerender) { %>${headContent}<% } else { %>
+    <title>Your Scrivito powered site is loading ...</title><% } %>
     <link rel="preconnect" href="https://api.scrivito.com" crossorigin />
     <link rel="preconnect" href="https://api.scrivito.com" />
     <link rel="preconnect" href="https://cdn0.scrvt.com" />
@@ -17,13 +17,15 @@
 
     <script src="/js_snippets_head.js"></script>
   </head>
-  <body>
+  <body<% if (htmlWebpackPlugin.options.prerender) { %> ${bodyAttributes}<% } %>>
+    <% if (htmlWebpackPlugin.options.prerender) { %>
+    <div id="application" data-scrivito-prerendering-obj-id="${objId}">${bodyContent}</div>
+    <script src="${preloadDumpFileName}"></script><% } else { %>
     <div id="application">
       <span class="loader">
-        Your <a href="https://www.scrivito.com">Scrivito</a> powered site is
-        loading ...
+        Your <a href="https://www.scrivito.com">Scrivito</a> powered site is loading ...
       </span>
-    </div>
+    </div><% } %>
     <%= htmlWebpackPlugin.tags.bodyTags %>
     <script src="/js_snippets_before_body_end.js"></script>
   </body>
